--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  short_name: "EarthquakePH",
-  name: "EarthquakePH",
-  background_color: "#682591",
-  theme_color: "#682591",
-  display: "standalone",
-  start_url: "/?utm_source=homescreen"
+  "short_name": "EQUAKEPH",
+  "name": "Earthquake Philippines",
+  "background_color": "#682591",
+  "theme_color":  "#682591",
+  "display": "standalone",
+  "start_url": "/?utm_source=homescreen"
 }
