--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "guzzlehttp/guzzle": "^6.2",
+        "php-ai/php-ml": "^0.6.2",
         "predis/predis": "^1.1"
     },
     "require-dev": {
